# S8-53M

./: .gitignore  LICENSE
sources/DLoader/: CMakeLists.txt  DLoader-Debug.uvguix.Sasha  DLoader-Debug.uvoptx  DLoader-Debug.uvprojx  DLoader.out  DLoader.uvguix.Sasha  DLoader.uvoptx  DLoader.uvprojx
sources/DLoader/src/: defines.cpp  defines.h  globals.h  main.cpp  main.h
sources/DLoader/src/Display/: Colors.cpp  Colors.h  Colors_stm_l.cpp  Display.cpp  Display.h  DisplayTypes.h  Painter.cpp  Painter.h  PainterC.h  PainterText.cpp  PainterText.h  Primitives_l.cpp
sources/DLoader/src/Display/font/: Font.cpp  Font.h
sources/DLoader/src/FDrive/: FDrive.cpp  FDrive.h
sources/DLoader/src/FlashDrive/: FlashDrive.cpp
sources/DLoader/src/Hardware/: FLASH.cpp  FLASH.h  FSMC.cpp  Hardware.cpp  Hardware.h  Timer.cpp  Timer.h
sources/DLoader/src/Hardware/CMSIS/: startup_stm32f429xx.s
sources/DLoader/src/Hardware/FatFS/: ffconf.h
sources/DLoader/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_ADC1.cpp  HAL_IT.cpp  stm32f2xx_hal_conf.h  stm32f2xx_hal_msp.c  stm32f2xx_hal_msp.cpp  stm32f2xx_it.c  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.cpp  stm32f4xx_it.c  stm32f4xx_it.cpp
sources/DLoader/src/Hardware/USBH/: usbh_conf.c  usbh_conf.cpp  usbh_conf.h
sources/DLoader/src/Panel/: Controls.cpp  Controls.h  Panel.cpp  Panel.h
sources/DLoader/src/Settings/: Settings.cpp  Settings.h  SettingsCommon.cpp  SettingsMain.cpp  SettingsMain.h  SettingsTypes.h
sources/DLoader/src/Utils/: GlobalFunctions.cpp  GlobalFunctions.h  Math.cpp  Math.h
sources/Device/: CMakeLists.txt  Device-Debug.uvguix.Sasha  Device-Debug.uvoptx  Device-Debug.uvprojx  Device.out  Device.sct  Device.uvguix.Sasha  Device.uvoptx  Device.uvprojx
sources/Device/src/: Globals.cpp  Globals.h  Log.cpp  Tables.cpp  Tables.h  defines.cpp  defines.h  device.cpp  device.h  main.cpp  main.h
sources/Device/src/Display/: BottomPart.cpp  BottomPart.h  Colors.cpp  Colors.h  Colors_d.cpp  Console.cpp  Console.h  DataPainter.cpp  DataPainter.h  Display.cpp  Display.h  DisplayPrimitives.cpp  DisplayPrimitives.h  DisplayTypes.h  Display_stm.cpp  Grid.cpp  Grid.h  Math3D.cpp  Math3D.h  Painter.cpp  Painter.h  PainterData.cpp  PainterData.h  PainterMem.cpp  PainterText.cpp  Painter_stm.cpp  Primitives.cpp  Primitives.h  Primitives_stm.cpp  Symbols.h  TopPart.cpp  Warnings.cpp  Warnings.h  WelcomeScreen.cpp
sources/Device/src/Display/Painter/: DisplayPrimitives.cpp
sources/Device/src/Display/Screen/: BottomPart.cpp  BottomPart.h  Grid.cpp  Grid.h  MemoryWindow.cpp  MemoryWindow.h  TopPart.cpp  TopPart.h  unity_display_screen.cpp
sources/Device/src/Display/font/: Font.cpp  Font.h
sources/Device/src/Ethernet/: Ethernet.cpp  TcpSocket.cpp  TcpSocket.h
sources/Device/src/FDrive/: FDrive.cpp  FDrive.h  FDrive_stm.cpp
sources/Device/src/FPGA/: DataSettings.cpp  DataSettings.h  FPGA.cpp  FPGA.h  FPGA_AutoFinder.cpp  FPGA_AutoFinder.h  FPGA_Calibration.cpp  FPGA_Math.cpp  FPGA_Math.h  FPGA_Reader.cpp  FPGA_Reader.h  FPGA_Settings.cpp  FPGA_Types.cpp  FPGA_Types.h  MathFPGA.cpp  MathFPGA.h  ReaderFPGA.cpp  ReaderFPGA.h  Storage.cpp  Storage.h
sources/Device/src/FPGA/Data/: DataSettings.cpp  DataSettings.h  Preparator.cpp  Preparator.h  Storage.cpp  Storage.h
sources/Device/src/Hardware/: ADC.cpp  ADC.h  CLOCK.cpp  EPROM.cpp  EPROM.h  FSMC.cpp  Hardware.cpp  Hardware.h  MSP_USBH.cpp  RAM.cpp  RAM.h  Sound.cpp  Sound.h  Timer.cpp  Timer.h
sources/Device/src/Hardware/CMSIS/: startup_stm32f429xx.s
sources/Device/src/Hardware/FatFS/: ffconf.h  usbh_diskio.c  usbh_diskio.h
sources/Device/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_ADC3.cpp  HAL_DAC.cpp  HAL_EEPROM.cpp  HAL_IT.cpp  HAL_OTP.cpp  HAL_PINS.cpp  HAL_PINS.h  HAL_RTC.cpp  HAL_SPI1.cpp  (+11 more)
sources/Device/src/LAN/: LAN.cpp  LAN.h  SocketTCP.cpp  SocketTCP.h
sources/Device/src/Menu/: FileManager.cpp  FileManager.h  Menu.cpp  Menu.h  MenuDrawing.cpp  MenuFunctions.cpp  MenuItems.cpp  MenuItems.h  MenuItemsDefs.h  MenuItemsGraphics.cpp  MenuItemsGraphics.h  MenuItemsLogic.cpp  MenuItemsLogic.h  MenuPagesNames.h
sources/Device/src/Panel/: Controls.cpp  Controls.h  Panel.cpp  Panel.h  PanelFunctions.cpp  Panel_view.cpp
sources/Device/src/Settings/: Settings.cpp  Settings.h  SettingsChannel.cpp  SettingsChannel.h  SettingsCommon.cpp  SettingsCommon.h  SettingsCursors.cpp  SettingsCursors.h  SettingsDebug.cpp  SettingsDebug.h  SettingsDisplay.cpp  SettingsDisplay.h  SettingsMain.cpp  SettingsMain.h  SettingsMath.h  SettingsMeasures.h  SettingsMemory.cpp  SettingsMemory.h  SettingsNRST.cpp  SettingsNRST.h  SettingsService.cpp  SettingsService.h  SettingsTime.cpp  SettingsTime.h  SettingsTrig.h  SettingsTypes.cpp  SettingsTypes.h  SettingsTypesGraphics.cpp
sources/Device/src/Utils/: Generator.cpp  Generator.h  GlobalFunctions.cpp  GlobalFunctions.h  Map.h  Math.cpp  Math.h  Measures.cpp  Measures.h  ProcessingSignal.cpp  ProcessingSignal.h  Stack2500uint16.cpp  Stack2500uint16.h  String.cpp  String.h  StringUtils.cpp  StringUtils.h  Strings.cpp  Strings.h  TablesWindow.h
sources/Device/src/VCP/: VCP.cpp  VCP.h
sources/Panel/: CMakeLists.txt  Panel-Debug.uvguix.Sasha  Panel-Debug.uvoptx  Panel-Debug.uvprojx  Panel-Release.uvguix.Sasha  Panel-Release.uvoptx  Panel.uvguix.Sasha  Panel.uvoptx  Panel.uvprojx
sources/Panel/src/: HAL.cpp  HAL.h  HAL_IT.cpp  HAL_PINS.cpp  HAL_PINS.h  HAL_SPI2.cpp  Interface.cpp  Interface.h  Keyboard.cpp  Keyboard.h  LEDS.cpp  LEDS.h  Log.cpp  PowerSupply.cpp  PowerSupply.h  defines.h  main.cpp  main.h  main.s  stm32l0xx_hal_conf.h  stm32l0xx_hal_msp.c  stm32l0xx_hal_msp.cpp  stm32l0xx_it.h
sources/Panel/src/Display/: Display.h  PainterText.cpp
sources/Panel/src/Hardware/: CPU.cpp  CPU_IT.cpp  Keyboard.cpp  LEDS.cpp  LEDS.h  LTDC.cpp  Timer.cpp
sources/Panel/src/Interface/: Interface.cpp
sources/Panel/src/Keyboard/: Controls.cpp  Controls.h  Keyboard.cpp  Keyboard.h
sources/Panel/src/Utils/: Debug.cpp  Math.cpp
sources/VS/Device/: CMakeLists.txt
sources/VS/Device/Ethernet/: Ethernet_win.cpp
sources/VS/Device/src/: main_win.cpp
(+470 files in other folders)
